# mesh_on_gazebo

./: CMakeLists.txt  Readme.md
MySrc/: MyColladaLoader.cc  MyColladaLoader.hh  PointcloudGazebo_pcd_mesh.cpp  PointcloudGazebo_pcd_publish.cpp  PointcloudGazebo_pcd_string.cpp  a.out  last  practice  practice.cpp  practice2.cpp  realsense_depth_to_mesh.cpp  realsense_mesh.cpp
MyWorld/: PointcloudGazebo_pcd_mesh.world  PointcloudGazebo_pcd_publish.world  PointcloudGazebo_pcd_string.world  pointcloud_mesh3.dae  realsense_depth_to_mesh.world
